@@ -3,6 +3,7 @@ Version 0.6.2~dev
 	* Change setCheckStatus method to match convention.
 	* sample: drop unused imports.
 	* sample: fix usage of basejob API.
+	* sample: add some documentation.
 
 Version 0.6.1 Released on 2010/01/25
 
